--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@angular/common": "~6.1.1",
     "@angular/core": "~6.1.1",
+    "@angular/fire": "^5.0.2",
     "@angular/forms": "~6.1.1",
     "@angular/http": "~6.1.1",
     "@angular/platform-browser": "~6.1.1",
@@ -24,19 +25,24 @@
     "@ionic-native/splash-screen": "5.0.0-beta.21",
     "@ionic-native/status-bar": "5.0.0-beta.21",
     "@ionic/angular": "4.0.0-beta.12",
+    "@ionic/storage": "^2.2.0",
     "core-js": "^2.5.3",
+    "firebase": "^5.5.2",
+    "install": "^0.12.1",
+    "npm": "^6.4.1",
     "rxjs": "6.2.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "~6.1.1",
-    "@angular/compiler": "~6.1.1",
-    "@angular/compiler-cli": "~6.1.1",
-    "@angular/language-service": "~6.1.1",
     "@angular-devkit/architect": "~0.7.2",
     "@angular-devkit/build-angular": "~0.7.2",
     "@angular-devkit/core": "~0.7.2",
     "@angular-devkit/schematics": "~0.7.2",
+    "@angular/cli": "~6.1.1",
+    "@angular/compiler": "~6.1.1",
+    "@angular/compiler-cli": "~6.1.1",
+    "@angular/language-service": "~6.1.1",
+    "@ionic/lab": "1.0.9",
     "@ionic/ng-toolkit": "^1.0.0",
     "@ionic/schematics-angular": "^1.0.0",
     "@types/jasmine": "~2.8.6",
